devops/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tmds-exporter
spec:
  finalizers:
  - kubernetes
