devops/k8s/networkpolicy.yaml
---
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
  labels:
    productName: tmselabs
    projectName: tmds-exporter
    appName: tmds-exporter
    createdBy: aon-se
  name: tmds-exporter
  namespace: tmds-exporter
spec:
  egress:
  - ports:
    - port: 53
      protocol: TCP
    - port: 53
      protocol: UDP
    - port: 443
      protocol: TCP
  ingress:
  - ports:
    - port: 9090
      protocol: TCP
  podSelector:
    matchLabels:
      app: prometheus
  policyTypes:
  - Ingress
  - Egress
